--- a/BlazorInventor/Shared/NavMenu.razor
+++ b/BlazorInventor/Shared/NavMenu.razor
@@ -14,14 +14,23 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="addWagen">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M20.5 17H6.615q-.666 0-1.14-.475Q5 16.051 5 15.385v-9.77q0-.269-.173-.442T4.385 5H3q-.213 0-.356-.144T2.5 4.499q0-.212.144-.356Q2.787 4 3 4h1.385q.666 0 1.14.475Q6 4.949 6 5.615v9.77q0 .269.173.442t.442.173H20.5q.213 0 .356.144q.144.144.144.357q0 .212-.144.356q-.143.143-.356.143ZM6.442 20.885q-.613 0-1.037-.424q-.424-.424-.424-1.038q0-.613.424-1.037q.424-.424 1.037-.424q.614 0 1.038.424q.424.424.424 1.037q0 .614-.424 1.038q-.424.424-1.038.424Zm2.135-6.654q-.343 0-.576-.232q-.232-.233-.232-.576v-2.846q0-.343.232-.576q.233-.232.576-.232h2.846q.343 0 .576.232q.232.233.232.576v2.846q0 .343-.232.576q-.233.232-.576.232H8.577Zm7 0q-.343 0-.576-.232q-.232-.233-.232-.576v-2.846q0-.343.232-.576q.233-.232.576-.232h2.846q.343 0 .576.232q.232.233.232.576v2.846q0 .343-.232.576q-.233.232-.576.232h-2.846Zm3.94 6.654q-.611 0-1.026-.424q-.414-.424-.414-1.038q0-.613.414-1.037q.415-.424 1.026-.424q.612 0 1.047.424q.436.424.436 1.037q0 .614-.436 1.038q-.435.424-1.047.424Z" /></svg>
+                add wagen
             </NavLink>
         </div>
+        
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="AddBands">
+                <span class="oi oi-plus" aria-hidden="true"></span> add new Band
+            </NavLink>
+        </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AddMaterials">
+                <span class="oi oi-plus" aria-hidden="true"></span> add new Materials
             </NavLink>
         </div>
     </nav>
