--- a/BlazorInventor/_Imports.razor
+++ b/BlazorInventor/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using BlazorInventor
 @using BlazorInventor.Shared
+@using DBInventorLibrary.DataAccess;
+@using BlazorInventor.Model;
+@using DBInventorLibrary.Models;
+@using DBInventorLibrary.Models.MaterialsModels;
+@using DBInventorLibrary.Models.WagensModel;
+@using DBInventorLibrary.Models.Bands
