add Task in method AddWagenDB

--- a/BlazorInventor/Pages/AddWagen.razor
+++ b/BlazorInventor/Pages/AddWagen.razor
@@ -58,7 +58,7 @@
 
     }
 
-    private async void AddWagenDB()
+    private async Task AddWagenDB()
     {
         List<BasicMaterialsModel> basicMaterials = new();
         BandsModel newBand = new();
