--- a/BlazorInventor/Pages/AddWagen.razor
+++ b/BlazorInventor/Pages/AddWagen.razor
@@ -5,7 +5,7 @@
 
 <h3>AddWagen</h3>
 
-<EditForm Model="newWagenModel" OnValidSubmit="AddWagenDB">
+<EditForm Model="@newWagenModel" OnValidSubmit="@AddWagenDB">
     <DataAnnotationsValidator />
     <ValidationSummary />
         <div class="row">
@@ -16,12 +16,14 @@
                 </div>
                 <div class="mb-3">
                     <label for="materials" >Materials List</label>
-                    @if (materilasList is not null)
+                @if (materilasList is not null)
                     {
                     <ul class="list-group">
-                            @foreach (var item in materilasList)
+                        @foreach (var item in materilasList)
                             {
-                            <li class="list-group-item list-group-item-primary" @onclick="(()=> ItemAddToListClicked(item))">@item.Name</li>
+                                <div class="mb-1">
+                                    <li class="list-group-item list-group-item-primary" role="button" @onclick="(()=> ItemAddToListClicked(item))">@item.Name</li>
+                                </div>
                             }
                         </ul>
                     }
@@ -52,10 +54,13 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var materials = await materialsData.GetMaterialAsync();
+        materilasList = await GetMaterials();
 
-        materilasList = materials;
+    }
 
+    private async Task<List<MaterialsModel>> GetMaterials()
+    {
+        return await materialsData.GetMaterialAsync();
     }
 
     private async Task AddWagenDB()
@@ -63,16 +68,23 @@
         List<BasicMaterialsModel> basicMaterials = new();
         BandsModel newBand = new();
         newBand.Id = newWagenModel.Id;
+
         foreach (var item in addedmaterilasList)
         {
             basicMaterials.Add(new BasicMaterialsModel(item));
         }
+
         SingleWagenModel single = new();
-        
+
         single.WagenMaterials = basicMaterials;
         single.Name = newWagenModel.Name;
         await singleWagen.CreateWagenTest(single);
+
+        // clear the form and list to refresh after submit
         newWagenModel = new();
+        addedmaterilasList.Clear();
+        materilasList.Clear();
+        materilasList = await GetMaterials();
     }
 
     private void ItemAddToListClicked(MaterialsModel materialsUI)
