new dropdown menu for updates itmes

--- a/BlazorInventor/Shared/NavBarBootstrap.razor
+++ b/BlazorInventor/Shared/NavBarBootstrap.razor
@@ -22,6 +22,17 @@
                         <li><a class="dropdown-item" href="AddBands">New Band</a></li>
                     </ul>
                 </li>
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                       Update
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="updateMaterila">Update Material</a></li>
+                        <li><a class="dropdown-item" href="updateWagen">Update Wagen</a></li>
+                        <li><a class="dropdown-item" href="updateBand">Update Band</a></li>
+                    </ul>
+                </li>
                 @* <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li> *@
