import components folder

--- a/BlazorInventor/_Imports.razor
+++ b/BlazorInventor/_Imports.razor
@@ -14,3 +14,4 @@
 @using DBInventorLibrary.Models.MaterialsModels;
 @using DBInventorLibrary.Models.WagensModel;
 @using DBInventorLibrary.Models.Bands
+@using BlazorInventor.Component
