--- a/BlazorInventor/Pages/Bands Pages/AddBands.razor
+++ b/BlazorInventor/Pages/Bands Pages/AddBands.razor
@@ -5,7 +5,7 @@
 
 
 <h3>New Band</h3>
-
+<ToastInformation @ref=TostInfo Message=@Toast.ToastMessage Delay=@Toast.Delay Header=@Toast.ToastHeader ToastBg=@Toast.ToastBG />
 <EditForm Model="@newBand" OnValidSubmit="@AddNewBand">
     <DataAnnotationsValidator />
     <ValidationSummary />
@@ -23,6 +23,11 @@
 </EditForm>
 
 @code {
+
+    private ToastInformation TostInfo { get; set; }
+    private ToastModel Toast = new();
+
+
     /// <summary>
     /// list we have from DB
     /// </summary>
@@ -52,6 +57,10 @@
         if (band.Wagens.Count > 0)
         {
             await bandData.CreateBand(band);
+            await ShowToastDialog("New Band", $"Band {band.Number} has been added", "success");
+        }else
+        {
+            await ShowToastDialog("Warrning", $"Band {band.Number} has been not added", "danger");
         }
 
         // after we add the new band we clear the model and list to refresh the items
@@ -60,5 +69,15 @@
         
         wagens = await singleWagen.GetWagenAsync();
 
+    }
+
+    private async Task ShowToastDialog(string header, string message, string toastBG)
+    {
+        Toast.ToastHeader = header;
+        Toast.ToastMessage = message;
+        Toast.ToastBG = toastBG;
+        Toast.Delay = 3000;
+
+        await TostInfo.ShowToast();
     }
 }
