reolad the list after delete

--- a/BlazorInventor/Pages/Bands Pages/UpdateBand.razor
+++ b/BlazorInventor/Pages/Bands Pages/UpdateBand.razor
@@ -51,6 +51,8 @@
     private async Task ItemDelete(BandsModel band)
     {
         await bandsData.DeleteBand(band);
+
+        bandsList = await bandsData.GetBandAsync();
     }
 
 }
