reload the list after item has been deleted

--- a/BlazorInventor/Pages/Materila Pages/UpdateMaterial.razor
+++ b/BlazorInventor/Pages/Materila Pages/UpdateMaterial.razor
@@ -54,6 +54,8 @@
     private async Task ItemDelete(MaterialsModel material)
     {
         await materialsData.DeleteMaterila(material);
+
+        materilasList = await materialsData.GetMaterialAsync();
     }
    
 }
