reload the list after delete item

--- a/BlazorInventor/Pages/Wagens Pages/UpdateWagen.razor
+++ b/BlazorInventor/Pages/Wagens Pages/UpdateWagen.razor
@@ -47,5 +47,7 @@
     private async Task ItemDelete(SingleWagenModel wagen)
     {
         await singleWagenData.DeleteWagen(wagen);
+
+        wagensList = await singleWagenData.GetWagenAsync();
     }
 }
