add controller to nav

--- a/BlazorInventor/Shared/NavBarBootstrap.razor
+++ b/BlazorInventor/Shared/NavBarBootstrap.razor
@@ -20,6 +20,7 @@
                         <li><a class="dropdown-item" href="addWagen">New Wagen</a></li>
                         @* <li><hr class="dropdown-divider"></li> *@
                         <li><a class="dropdown-item" href="AddBands">New Band</a></li>
+                        <li><a class="dropdown-item" href="AddController">New Controller</a></li>
                     </ul>
                 </li>
                 
@@ -31,6 +32,7 @@
                         <li><a class="dropdown-item" href="updateMaterila">Update Material</a></li>
                         <li><a class="dropdown-item" href="updateWagen">Update Wagen</a></li>
                         <li><a class="dropdown-item" href="updateBand">Update Band</a></li>
+                        <li><a class="dropdown-item" href="UpdateController">Update Controller</a></li>
                     </ul>
                 </li>
                 @* <li class="nav-item">
