--- a/BlazorInventor/_Imports.razor
+++ b/BlazorInventor/_Imports.razor
@@ -14,4 +14,5 @@
 @using DBInventorLibrary.Models.MaterialsModels;
 @using DBInventorLibrary.Models.WagensModel;
 @using DBInventorLibrary.Models.Bands
+@using DBInventorLibrary.Models.ControllerModels
 @using BlazorInventor.Component
