heading name change

--- a/BlazorInventor/Pages/Controllers/UpdateController.razor
+++ b/BlazorInventor/Pages/Controllers/UpdateController.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager navManager
 
 
-<h3>Update Controller</h3>
+<h3>Controllers Info</h3>
 
 <div class="container">
     @if (ControllersList is not null)
