test new features

--- a/BlazorInventor/Pages/Index.razor
+++ b/BlazorInventor/Pages/Index.razor
@@ -43,6 +43,7 @@ Welcome to your new app.
     </p>
 }
 
+<ModalTeast/>
 
 @code{
 
@@ -84,4 +85,5 @@ Welcome to your new app.
         selectedmaterialsName = materials!.First(c => c.Id.Equals(selectedmaterialsId)).Name;
         materials = null;
     }
+
 }
