add inventor label

--- a/BlazorInventor/Shared/NavBarBootstrap.razor
+++ b/BlazorInventor/Shared/NavBarBootstrap.razor
@@ -26,13 +26,26 @@
                 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                       Update
+                       Info
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="updateMaterila">Update Material</a></li>
-                        <li><a class="dropdown-item" href="updateWagen">Update Wagen</a></li>
-                        <li><a class="dropdown-item" href="updateBand">Update Band</a></li>
-                        <li><a class="dropdown-item" href="UpdateController">Update Controller</a></li>
+                        <li><a class="dropdown-item" href="updateMaterila">Material info</a></li>
+                        <li><a class="dropdown-item" href="updateWagen">Wagen info</a></li>
+                        <li><a class="dropdown-item" href="updateBand">Band info</a></li>
+                        <li><a class="dropdown-item" href="UpdateController">Controller info</a></li>
+                    </ul>
+                </li>
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                       Inventor
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="InventorControllers"> Set Controllers for Inventor</a></li>
+                        <li><a class="dropdown-item" href="Inventor"> Start Inventor</a></li>
+                       @*  <li><a class="dropdown-item" href="">Update Wagen</a></li>
+                        <li><a class="dropdown-item" href="">Update Band</a></li>
+                        <li><a class="dropdown-item" href="">Update Controller</a></li> *@
                     </ul>
                 </li>
                 @* <li class="nav-item">
