--- a/BlazorInventor/wwwroot/css/site.css
+++ b/BlazorInventor/wwwroot/css/site.css
@@ -136,3 +136,22 @@ ul.materialsAddedItems {
                 background: lightgrey;
                 color: var(--bs-body);
             }
+
+/* style for modal */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: white;
+    width: 50%;
+    margin: 40% auto;
+    padding: 20px;
+}
+
